syntax = "proto3";

package edu.uci.ics.amber;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

message WorkflowIdentity {
  int64 id = 1;
}

message ExecutionIdentity {
  int64 id = 1;
}

message ActorVirtualIdentity {
  string name = 1;
}

message ChannelIdentity {
  ActorVirtualIdentity fromWorkerId = 1 [(scalapb.field).no_box = true];
  ActorVirtualIdentity toWorkerId = 2 [(scalapb.field).no_box = true];
  bool isControl = 3;
}

message OperatorIdentity {
  string id = 1;
}

message PhysicalOpIdentity{
  OperatorIdentity logicalOpId = 1 [(scalapb.field).no_box = true];
  string layerName = 2;
}

message ChannelMarkerIdentity{
  string id = 1;
}



