syntax = "proto3";

package edu.uci.ics.amber;

import "edu/uci/ics/amber/virtualidentity.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false,
  no_default_values_in_constructor: false
};

message PortIdentity {
  int32 id = 1;
  bool internal = 2;
}

message InputPort {
  PortIdentity id = 1 [(scalapb.field).no_box = true];
  string displayName = 2;
  bool allowMultiLinks = 3;
  repeated PortIdentity dependencies = 4;
}

message OutputPort {
  PortIdentity id = 1 [(scalapb.field).no_box = true];
  string displayName = 2;
  bool blocking = 3;
}


message PhysicalLink {
  PhysicalOpIdentity fromOpId = 1 [(scalapb.field).no_box = true];
  PortIdentity fromPortId = 2 [(scalapb.field).no_box = true];
  PhysicalOpIdentity toOpId = 3 [(scalapb.field).no_box = true];
  PortIdentity toPortId = 4 [(scalapb.field).no_box = true];
}
